[tool.poetry]
name = "mpl-mollier-axes"
version = "0.2.0-alpha.0"
description = "Matplotlib Axes class providing the transform for plotting 'Mollier-style' psychrometric charts."
authors = ["woistdiekatze <woistdiekatze.4x61i@simplelogin.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/woistdiekatze/mpl-mollier-axes"
classifiers=[
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Framework :: Matplotlib",
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
matplotlib = "^3.6.2"
PsychroLib = "^2.5.0"
CoolProp = {version = "^6.4.3", optional = true}
scipy = "^1.10.0"

[tool.poetry.extras]
CoolProp = ["CoolProp"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
yapf = "^0.32.0"
flakeheaven = "^3.2.1"
flake8-isort = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.flakeheaven]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakeheaven.plugins]
flake8-isort = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=./mpl_mollier_axes"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
